--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
+# 忽略编译生成的文件
+*.exe
+*.out
+
+# 忽略环境变量文件
 .env
+
+# 忽略 Swagger 临时生成文件（如果不需要上传）
+swagger.json
+swagger.yaml
+
+# 忽略 IDE 配置文件
+.vscode/
+.idea/
